# dapr-labs

./: .gitignore  LICENSE  README.md  client.http  client.local.http  docker-compose.yaml
.devcontainer/: Dockerfile-dev  core-libs.sh  devcontainer.json
Libs/CoffeeShop.Contracts/: KitchenOrdered.cs
Libs/N8T.Infrastructure/: N8T.Infrastructure.csproj
ProductService/: Dockerfile  Program.cs
ProductService/UseCases/: ItemTypesQuery.cs  ItemsByIdsQuery.cs
aspire/: README.md  SpinAppHost.sln
aspire/.devcontainer/: Dockerfile.dev  devcontainer.json
aspire/ServiceDefaults/: Extensions.cs
aspire/SpinAppHost/: Program.cs  SpinAppHost.csproj  SpinAppResource.cs  appsettings.Development.json
aspire/SpinAppHost/Properties/: launchSettings.json
aspire/WebApp/: Program.cs  WebApp.csproj  WebApp.http  appsettings.json
aspire/WebApp01/: Program.cs  WebApp01.csproj  WebApp01.http
aspire/WebApp01/Properties/: launchSettings.json
aspire/dapr/components/: pinged_subscription.yaml  ponged_subscription.yaml  pubsub-rabbitmq.az.yaml  pubsub-rabbitmq.yaml
aspire/k8s/: ingress.yaml  productapp.yaml  testspinapp.yaml  webapp.yaml
aspire/test-spin/: Cargo.toml  spin.toml
aspire/test-spin/src/: lib.rs
component-model-expr/: .gitignore  Cargo.toml  README.md  build.sh  calculator_composed.wasm  composed.wasm  config.yml  makefile  spin.toml  wasi_snapshot_preview1.command.wasm  wasi_snapshot_preview1.reactor.wasm
component-model-expr/.devcontainer/: Dockerfile  devcontainer.json
component-model-expr/add/: Cargo.toml
component-model-expr/add/src/: lib.rs
component-model-expr/add/wit/: world.wit
component-model-expr/adder/src/: lib.rs
component-model-expr/calculator/: Cargo.toml
component-model-expr/calculator/src/: lib.rs
component-model-expr/command/: Cargo.toml
component-model-expr/command/src/: main.rs
component-model-expr/spin-app/: Cargo.toml
component-model-expr/spin-app/src/: calculator.rs  lib.rs
component-model-expr/wit/: calculator.wit
dotnet/: client.http  coffeeshop.sln
dotnet/src/BaristaService/: Dockerfile  Program.cs  appsettings.Development.json
dotnet/src/CounterService/: CounterService.csproj  Dockerfile  Program.cs  appsettings.Development.json
dotnet/src/KitchenService/: Dockerfile  Program.cs  appsettings.Development.json
dotnet/src/Libs/: packages.props
dotnet/src/ProductService/: Dockerfile  ProductService.csproj  Program.cs  appsettings.Development.json
dotnet/src/ReverseProxy/: Dockerfile  Program.cs  ReverseProxy.csproj  appsettings.Development.json
polyglot/: .gitignore  Directory.Build.props  Directory.Packages.props  Makefile  README.md  client.http  client.k3d.http  client.local.http  coffeeshop.sln  demo.md  docker-compose.yaml
polyglot/.devcontainer/: Dockerfile-dev  devcontainer.json  post-create.sh
polyglot/assets/: coffeeshop-wasm-wasi-dapr-k8s.excalidraw  k8s-dapr-spin.excalidraw
polyglot/barista-api/: .gitignore  Cargo.toml  Dockerfile  deploy.yaml  spin.toml
polyglot/barista-api/src/: lib.rs
polyglot/coffeeshop-apis/: spin.toml
polyglot/coffeeshop-apis/barista-api/: Cargo.toml
polyglot/coffeeshop-apis/kitchen-api/: Cargo.toml  spin.toml
polyglot/coffeeshop-apis/product-api/: Cargo.toml
polyglot/coffeeshop-apis/product-api/src/: lib.rs
polyglot/components/: barista_order_placed_subscription.yaml  barista_pubsub.yaml  barista_statestore_outbox.yaml  barista_updated_subscription.yaml  daprConfig.yaml  kitchen_order_placed_subscription.yaml  kitchen_pubsub.yaml  kitchen_statestore_outbox.yaml  kitchen_updated_subscription.yaml  statestore.yaml
polyglot/components-k8s/: barista_order_placed_subscription.yaml  barista_pubsub.yaml  barista_updated_subscription.yaml  daprConfig.yaml  kitchen_order_placed_subscription.yaml  kitchen_pubsub.yaml  kitchen_updated_subscription.yaml  statestore.yaml
polyglot/counter-api/: CounterApi.csproj  Program.cs  appsettings.Development.json  counter-api.csproj
polyglot/counter-api/Activities/: AddOrderActivity.cs  BaristaUpdateOrderActivity.cs  KitchenUpdateOrderActivity.cs  NotifyActivity.cs  UpdateOrderActivity.cs
polyglot/counter-api/Domain/: GetOrderByIdWithLineItemSpec.cs  IItemGateway.cs  ItemStatus.cs  ItemType.cs  LineItem.cs  Location.cs  Order.cs  OrderSource.cs  OrderStatus.cs
polyglot/counter-api/Extensions/: OpenTelemetryExtensions.cs
polyglot/counter-api/Features/: OrderFulfillmentQuery.cs  OrderUpdatedCommand.cs  PlaceOrderCommand.cs
polyglot/counter-api/Infrastructure/: EventDispatcher.cs  (+1 more)
polyglot/docs/: index.md  part-1.md  part-2.md  part-3.md  part-4.md
polyglot/kitchen-api/: Cargo.toml  Dockerfile  deploy.yaml  spin.toml
polyglot/libs/: packages.props
polyglot/notification-api/: README.md  package-lock.json  package.json  spin.toml
polyglot/product-api/: Cargo.toml  Dockerfile  deploy.yaml  spin.toml
polyglot/reverse-proxy/: ReverseProxy.csproj  appsettings.Development.json
rust/: .envrc  .gitignore  Cargo.toml  README.md  api-specs.md  client.dapr.http  client.http  docker-compose.yaml
rust/.devcontainer/: Dockerfile-dev  core-libs.sh  devcontainer.json
rust/components/: daprConfig.yaml  kitchen_orderup_pubsub.yaml  orderup_pubsub.yaml
rust/components-docker/: barista_orderup_pubsub.yaml  daprConfig.yaml  kitchen_orderup_pubsub.yaml
rust/crates/barista-entity/: Cargo.toml
rust/crates/barista-entity/src/: barista_orders.rs  lib.rs  prelude.rs
rust/crates/counter-entity/: Cargo.toml
rust/crates/counter-entity/src/: lib.rs  line_items.rs  orders.rs  prelude.rs
rust/crates/kitchen-entity/: Cargo.toml
rust/crates/kitchen-entity/src/: kitchen_orders.rs  lib.rs  prelude.rs
rust/sql/: create_tables.sql
spin/: .gitignore  Makefile  README.md  client.http  docker-compose.yaml
spin/.devcontainer/: Dockerfile  devcontainer.json
spin/components/: barista_orderup_pubsub.yaml  barista_pubsub.yaml  kitchen_orderup_pubsub.yaml  kitchen_pubsub.yaml
spin/counter-api/: Cargo.toml  spin.toml
spin/product-api/: Cargo.toml  spin.toml
spin/product-api/src/: lib.rs
spin/sql/: create_tables.sql
(+179 files in other folders)
