[workspace]
members = ["calculator", "adder", "spin-app"]

[workspace.dependencies]
wit-bindgen = { version = "0.9.0" }
wasmtime = { version = "13.0.0", features = ["component-model", "async"] }
wasmtime-wasi = "13.0.0"
wit-bindgen-core = "0.12.0"
wit-bindgen-rust = "0.12.0"
wit-component = "0.14.0"