[package]
name = "spin-app"
authors = ["thangchung <thangchung@ymail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.5.0" }
wit-bindgen = { version = "0.5.0", default_features = false }
cargo-component-bindings = { git = "https://github.com/bytecodealliance/cargo-component" }

[workspace]

[package.metadata.component.target]
path = "../wit/calculator.wit"
world = "app"
