[package]
name = "spin-app"
authors = ["thangchung <thangchung@ymail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
# The Spin SDK.
# spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.5.0" }
serde = { version = "1.0.173", features = ["serde_derive"] }
serde_qs = "0.12.0"
wit-bindgen.workspace = true
cargo-component-bindings = { git = "https://github.com/bytecodealliance/cargo-component" }
# wasmtime = { workspace = true }
# wasmtime-wasi = { workspace = true }
# wit-bindgen-core = { workspace = true }
# wit-bindgen-rust = { workspace = true }
# wit-component = { workspace = true }

# [package.metadata.component.target]
# path = "../wit/calculator.wit"
# world = "app"

[package.metadata.component]

[package.metadata.component.dependencies]
"docs:calculator" = { path = "../target/wasm32-wasi/release/calculator.wasm" }
