[package]
name = "product-api"
version = "0.1.0"
authors = ["Thang Chung <thangchung@nomail.com>"]
description = "Coffeeshop on Spin v2 - Product APIs"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }
